Fix #6404 : Version dropdown on download page doesn't scroll on overflow (Updated v2)

--- a/components/Common/Select/index.module.css
+++ b/components/Common/Select/index.module.css
@@ -60,9 +60,9 @@
 
 .dropdown {
   @apply max-h-48
-    overflow-y-auto;
-  @apply max-w-xs
+    max-w-xs
     overflow-hidden
+    overflow-y-auto
     rounded-md
     border
     border-neutral-200
